--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:mock": "vite --port 50789 --mode mock",
+    "dev:mock": "powershell -ExecutionPolicy Bypass -File close-port.ps1 && vite --port 50792 --mode mock",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
